--- a/app/views/mailers/app_mailer/_mail_header.html.erb
+++ b/app/views/mailers/app_mailer/_mail_header.html.erb
@@ -20,7 +20,7 @@
                               <tbody>
                               <tr>
                                 <td style="padding:0px 18px 9px;color:#ffffff;word-break:break-word;font-family:Helvetica;font-size:12px;line-height:150%;text-align:left" valign="top">
-                                  Your Vaayu account has been created
+                                  Your Alyte account has been created
                                 </td>
                               </tr>
                               </tbody>
