--- a/app/views/mailers/ingest_mailer/notify.html.erb
+++ b/app/views/mailers/ingest_mailer/notify.html.erb
@@ -40,7 +40,7 @@
                               </div>
                               <div>&nbsp;</div>
                               <div>&nbsp;</div>
-                              <div>&nbsp;- VAAYU Team</div>
+                              <div>&nbsp;- ALYTE Team</div>
                           </td>
                         </tr>
                       </tbody>
