role Access changes

--- a/app/views/trips/angular_views/_role_access.html
+++ b/app/views/trips/angular_views/_role_access.html
@@ -27,7 +27,7 @@
                             </tr>
                             <tr ng-repeat="row in roleModuleAccess track by $index">
                                 <td>
-                                    {{row.role_name_view}}{{$index}}
+                                    {{row.role_name_view}}
                                 </td>
                                 <td colspan="3" ng-repeat="roleModule in moduleColumn" style="padding: 0;">
                                     <table class="table table-bordered" style="border: 0;">
