--- a/app/views/trips/angular_views/_role_access.html
+++ b/app/views/trips/angular_views/_role_access.html
@@ -2,6 +2,7 @@
     <div class="container-fluid mt-4">
         <div class="row">
             <div class="col-md-12">
+                <toaster-container ng-if="toggleView"></toaster-container>
                 <div style="overflow: auto;">
                     <table class="table table-bordered">
                         <thead>
