--- a/app/views/provisioning/_vehicles.html.slim
+++ b/app/views/provisioning/_vehicles.html.slim
@@ -26,7 +26,9 @@
           th
             | Seat
           th
-            | Compliance
+            | Induction Status
+          th
+            | Compliance Status
           th
             | Status
           th
