--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -334,3 +334,30 @@
   bottom: 20px;
   cursor: pointer;
 }
+
+.hover-parent{
+  position: relative;
+}
+
+.inner-box{
+  position: absolute;
+  width: 150px;
+  bottom: -110px;
+  padding: 7px;
+  border: 1px solid #000;
+  border-radius: 3px;
+  -webkit-box-shadow: 3px 3px 6px 2px rgba(0,0,0,0.3);
+  -moz-box-shadow: 3px 3px 6px 2px rgba(0,0,0,0.3);
+  box-shadow: 3px 3px 6px 2px rgba(0,0,0,0.3);
+}
+
+.inner-box:first-child{
+  left: 0;
+}
+.inner-box:nth-child(2){
+  left: 160px;
+}
+
+.hover-p{
+  margin: 0;
+}
