--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -489,6 +489,7 @@
                 <div class="col-md-10">
                   <h3 class="float-left"><span class="vaayu-sidebar-title">Add Vehicle </span> <span
                       class="title-caption"></span></h3>
+                  <h6 class="float-left custom-message" id="custom-message"></h6>
                 </div>
                 <div class="col-md-2 text-right">
                   <button type="button" ng-click="hideVehicalSidebar()" class="btn btn-close float-right">&#x2715;</button>
@@ -566,7 +567,7 @@
 
                           </p>
                           <p class="hover-p">Type: <span ng-show="trip.trip_type == 0">Login</span><span ng-show="trip.trip_type == 1">Log Out</span></p>
-                          <p class="hover-p">Trip end time: {{trip.estimated_trip_endtime}}</p>
+                          <p class="hover-p">Trip end time: {{trip.tripdate}} | {{trip.estimated_trip_endtime}}</p>
                         </div>
                       </div>
                       <span class="input-group-addon addon-prepend">
