--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -391,7 +391,7 @@
       </div>
       <div class="vaayu-modal-footer">
         
-        <div ng-dropdown-multiselect=""
+        <div ng-dropdown-multiselect="" id="dropdownParent"
             on-change="test()"
            ng-if="isDisable1(modelData)" options="vehicleList"
           style="display: inline-block;" selected-model="selectedVehicle " checkboxes="true"
