--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -212,7 +212,7 @@
   <!-- <button id="myBtn">Open Modal</button> -->
 
   <!-- The Modal -->
-  <div id="myModal" class="vaayu-modal" style="display: block;" ng-if="showPopup">
+  <div id="myModal" class="vaayu-modal" style="display: block; padding-top: 65px;" ng-if="showPopup">
 
     <!-- Modal content -->
     <div class="vaayu-modal-content" style="width: 90%;margin-left: 95px;">
