--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -32,7 +32,7 @@
                     </div> -->
             <div class="form-group pr-2">
               <div class="form-group pr-2">
-                <!-- <p class="input-group custom-date date_style">
+                <p class="input-group custom-date date_style">
                   <input type="text" class="form-control data_in_style selectFilter" datepicker-popup="{{format}}"
                     ng-model="filterDate" is-open="opened" datepicker-options="dateOptions"
                     date-disabled="disabled(date, mode)" ng-required="true" close-text="Close"
@@ -42,7 +42,7 @@
                     <button type="button" class="btn btn-default data_in_style data_in_style_btn" ng-click="open($event)"><i
                         class="fa fa-calendar"></i></button>
                   </span>
-                </p> -->
+                </p>
               </div>
             </div>
   
