--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -350,7 +350,7 @@
 .inner-box{
   position: absolute;
   top: 55px;
-  padding: 7px;
+  padding: 0 7px;
   border: 0.5px solid #3597ec;
   border-radius: 3px;
   -webkit-box-shadow: 3px 3px 6px 2px rgba(0,0,0,0.3);
@@ -386,4 +386,13 @@
   padding: 8px;
   border-radius: 4px;
   display: none;
+}
+
+.hover-ele{
+  padding: 7px 0;
+  border-bottom: 0.5px solid #3597ec;
+}
+
+.hover-ele:last-child{
+  border-bottom: 0;
 }
