--- a/app/views/trips/angular_views/_reports.html
+++ b/app/views/trips/angular_views/_reports.html
@@ -1,5 +1,7 @@
 <div class="vayau-routing" ng-controller='reportCtrl' ng-init="init()">
+  <toaster-container ng-show="toggleView"></toaster-container>
     <div class="container-fluid mt-4">
+
         <div class="row">
           <div class="col-md-12">
             <form class="form-inline">
