--- a/app/views/employee_trips/schedule_trip.js.slim
+++ b/app/views/employee_trips/schedule_trip.js.slim
@@ -33,7 +33,7 @@
 |     updateCalendarTableHead(e);
 |     updateCalendarTitle(e);
 |     setSelectedDateVal(e.date);
-|     getEmployeeTrips(dateRange, "cancel");
+|     getEmployeeTrips(dateRange);
 |     scheduleContentHighlight(e);
 |   }
 | });
