--- a/app/views/employees/_form.html.slim
+++ b/app/views/employees/_form.html.slim
@@ -73,7 +73,7 @@
       - unless @is_guard
         .row
           .col-md-4.col-md-offset-4
-            = ui.association :site, label: 'Site', wrapper_html: { class: 'site' }, prompt: false, required: true, prompt: "Choose Site"
+            = ui.association :site, label: 'Site', wrapper_html: { class: 'site' }, required: true, prompt: "Choose Site"
           .col-md-4
             = ui.association :zone, label: 'Billing Zone', wrapper_html: {class: 'site'}, prompt: "Choose Billing Zone"
       .row[style="margin-bottom:0px"]
