--- a/app/views/provisioning/_shifts.html.slim
+++ b/app/views/provisioning/_shifts.html.slim
@@ -26,7 +26,7 @@
         h4.modal-title
           | Deactivation Warning
       .modal-body
-        p Upcoming trips are depends on this shift.
+        p Upcoming trips are dependent on this shift.
       .modal-footer
         button.btn.btn-sm.btn-default[type="button" data-dismiss="modal"]
           | Close
