Replaced the footer name from Vaayu to Alyte.

--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -20,7 +20,7 @@
       .signin-footer
         ul.list-inline
           li
-            | © 2016 Vaayu
+            | © 2016 Alyte
           li
             a[href="#"]
               | Terms of Use
