--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -26,7 +26,7 @@
       .signin-footer
         ul.list-inline
           li
-            | © 2016 Vaayu
+            | © 2016 Alyte
           li
             a[href="#"]
               | Terms of Use
